--- a/force-app/main/default/aura/contacts/contacts.cmp
+++ b/force-app/main/default/aura/contacts/contacts.cmp
@@ -6,7 +6,7 @@
       <lightning:button name="details" label="Details" onclick="{!c.goToRecord}" />
     </aura:set>
     <aura:set attribute="footer">
-      <lightning:badge label="{!v.contact.Email" />
+      <lightning:badge label="{!v.contact.Email}" />
     </aura:set>
     <p class="slds-p-horizontal_small">
       {!v.contact.Phone}
