--- a/force-app/main/default/aura/contactList/contactList.cmp
+++ b/force-app/main/default/aura/contactList/contactList.cmp
@@ -14,14 +14,14 @@
         <lightning:icon iconName="standard:contact" />
       </lightning:layoutItem>
       <lightning:layoutItem class="slds-m-left_small">
-        <p class-"slds-text-title_cap slds-line-height_reset">Contacts</p>
+        <p class="slds-text-title_caps slds-line-height_reset">Contacts</p>
         <h1 class="slds-page-header__title slds-p-right_x-small">Contact Viewer</h1>
       </lightning:layoutItem>
     </lightning:layout>
 
     <lightning:layout>
       <lightning:layoutItem>
-        <p class="slds-text-body_small">{!v.totalContacts} Contacts - View Contacts Based on Lead Sources</p>
+        <p class="slds-text-body_small">{!v.totalContacts} Contacts • View Contacts Based on Lead Sources</p>
       </lightning:layoutItem>
     </lightning:layout>
   </div>
@@ -30,15 +30,16 @@
   <lightning:layout>
     <lightning:layoutItem padding="horizontal-medium">
       <!-- Create a dropdown menu with options -->
-      <lightning:select aura:id="select" label="Lead Source" name="source" onchange="{c.handleSelect}" class="slds-m-bottom_medium">
+      <lightning:select aura:id="select" label="Lead Source" name="source" onchange="{!c.handleSelect}" class="slds-m-bottom_medium">
         <option value="">-- Select a Lead Source --</option>
-        <option value="Referal" text="Referral" />
+        <option value="Referral" text="Referral" />
         <option value="Social Media" text="Social Media" />
         <option value="All" text="All" />
       </lightning:select>
 
       <!-- Iterate over the list of contacts and display them -->
       <aura:iteration var="contact" items="{!v.contacts}">
+        <!-- If you’re using a namespace, replace with myNamespace:contacts-->
         <c:contacts contact="{!contact}" />
       </aura:iteration>
     </lightning:layoutItem>
