--- a/force-app/main/default/aura/leadList/leadList.cmp
+++ b/force-app/main/default/aura/leadList/leadList.cmp
@@ -1,27 +1,27 @@
-<aura:component implements="force:appHostable" controller="ContactController">
+<aura:component implements="force:appHostable" controller="LeadController">
   <!-- Handle component initialization in a client-side controller -->
   <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
 
   <!-- Dynamically load the list of contacts -->
-  <aura:attribute name="contacts" type="Contact[]" />
-  <aura:attribute name="contactList" type="Contact[]" />
-  <aura:attribute name="totalContacts" type="Integer" />
+  <aura:attribute name="leads" type="Contact[]" />
+  <aura:attribute name="leadList" type="Contact[]" />
+  <aura:attribute name="totalLeads" type="Integer" />
 
-  <!-- Page header with a counter that displays total number of contacts -->
+  <!-- Page header with a counter that displays total number of leads -->
   <div class="slds-page-header slds-page-header_object-home">
     <lightning:layout>
       <lightning:layoutItem>
-        <lightning:icon iconName="standard:contact" />
+        <lightning:icon iconName="standard:lead" />
       </lightning:layoutItem>
       <lightning:layoutItem class="slds-m-left_small">
-        <p class="slds-text-title_caps slds-line-height_reset">Contacts</p>
-        <h1 class="slds-page-header__title slds-p-right_x-small">Contact Viewer</h1>
+        <p class="slds-text-title_caps slds-line-height_reset">Leads</p>
+        <h1 class="slds-page-header__title slds-p-right_x-small">Lead Viewer</h1>
       </lightning:layoutItem>
     </lightning:layout>
 
     <lightning:layout>
       <lightning:layoutItem>
-        <p class="slds-text-body_small">{!v.totalContacts} Contacts • View Contacts Based on Lead Sources</p>
+        <p class="slds-text-body_small">{!v.totalLeads} Leads • View Leads Based on Lead Sources</p>
       </lightning:layoutItem>
     </lightning:layout>
   </div>
@@ -38,9 +38,9 @@
       </lightning:select>
 
       <!-- Iterate over the list of contacts and display them -->
-      <aura:iteration var="contact" items="{!v.contacts}">
-        <!-- If you’re using a namespace, replace with myNamespace:contacts-->
-        <c:contacts contact="{!contact}" />
+      <aura:iteration var="lead" items="{!v.leads}">
+        <!-- If you’re using a namespace, replace with myNamespace:leads-->
+        <c:leads lead="{!lead}" />
       </aura:iteration>
     </lightning:layoutItem>
   </lightning:layout>
